samples/_failures_safe/1761713677_2ff2c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0edd16f.c: In function ‘main’:
./samples/SAFE/__tmp_f0edd16f.c:172:5: error: expected declaration or statement at end of input
  172 |     print_tokens(tokens, token_count);
      |     ^~~~~~~~~~~~
